# kr_stock_analysis

./: .claudeignore  .dockerignore  .env.example.production  .env.npm  .env.production  .gitignore  ACCESS_GUIDE.md  CLAUDE.md  Dockerfile.celery  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.gateway  Dockerfile.service  Dockerfile.worker  Makefile  PROGRESS.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  openapi.json  pytest.ini  requirements.txt  run.py
.github/: dependabot.yml  pull_request_template.md
docs/: BACKEND_ANALYSIS.md  DOCKER_COMPOSE.md  DOCKER_COMPOSE_UNIFICATION.md  HMR_SETUP_GUIDE.md  INFRA_MAINTENANCE.md  NGINX_PROXY_SETUP.md  OHLC_COLLECTOR.md  OPEN_ARCHITECTURE.md  SERVICE_MODULARIZATION.md  SYSTEMD_AUTOBOOT_SETUP.md  TESTING.md  TEST_MOCK_SERVICES.md  WEBSOCKET.md  WEBSOCKET_INTEGRATION_TEST_PLAN.md  openapi.yaml
frontend/: .dockerignore  .env.production  Dockerfile  README.dev.md  README.md  eslint.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
migrations/: add_missing_tables.py  add_news_urls_to_ai_analysis.py
recommand_page_ref/: config.js  daily_blog_post.md  dashboard.url  debug_news.js  get_recommendations.js  history.json  index.html  open_dashboard.bat  package-lock.json  package.json  raw_news.html  run_forever.bat  script.js  server.js  styles.css  test_api.js  test_news.js
scripts/: collect_daily_prices.py  collect_daily_prices_kiwoom.py  connect-npm-network.sh  connect_npm_network.sh  deploy-daytrading.sh  deploy-systemd-service.sh  deploy_systemd_remote.sh  deploy_systemd_service.sh  docker-start.sh  fix_npm_proxy.py  fix_stock_npm_config.py  generate_openapi_spec.py  init_db.py  migrate_csv_to_db.py  migrate_daytrading_score.py  rollback-daytrading.sh  run_tests.py  setup_npm_proxy.py  start_all.sh  start_frontend.sh  start_services.sh  stop_all.sh  test_api.py  test_gemini_api.py  test_kiwoom_api.py  test_krx_collector.py  test_news_collection.py  test_news_sentiment.py  test_ohlc_collector.py  verify-frontend-build.sh  verify_deployment.sh
services/api_gateway/: Dockerfile  __init__.py  dashboard.py  main.py  pyproject.toml  realtime_cache.py  schemas.py  service_registry.py
services/api_gateway/routes/: ai.py  api_keys.py  backtest.py  chatbot.py  daytrading.py  jongga_v2.py  news.py  performance.py  signals.py  stocks.py  system.py  triggers.py
services/api_gateway/tests/: conftest.py  test_api.py  test_realtime_cache.py  test_service_registry.py
services/api_gateway/utils/: __init__.py  daytrading.py
services/daytrading_scanner/: Dockerfile  broadcaster.py  main.py  price_broadcaster.py  pyproject.toml  realtime_data_collector.py  scanner.py
services/daytrading_scanner/models/: daytrading.py  scoring.py
services/signal_engine/: Dockerfile  __init__.py  main.py  pyproject.toml  scorer.py
services/signal_engine/tests/: __init__.py  test_api.py  test_docker.py  test_scorer.py
src/: __init__.py
(+584 files in other folders)
